<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.booking.ui.home_user.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_user" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.booking.ui.history_user.HistoryUserFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history_user" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.booking.ui.profile_user.ProfileUserFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_user" />
</navigation>