<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".ui.history.HistoryFragment">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/main"
        android:padding="20dp"
        android:gravity="bottom">

        <!-- "Halo" Text -->
        <TextView
            android:id="@+id/textHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/halo"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp" />

        <!-- Horizontal Layout for User Name and Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

            <!-- Admin Name -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_abidin"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <!-- Date Time -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senin_12_des_2024"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booked_history"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/main"
            android:paddingBottom="8dp" />

        <!-- ListView -->
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />
    </LinearLayout>
</LinearLayout>